--- a/css/style.css
+++ b/css/style.css
@@ -16,33 +16,42 @@ h1 {
 legend {
     padding: 10px 0;
     font-size: 1.3em;
+    width: 100%;
+    border-top: 2px solid #000;
 }
 
 /********** GENERAL RULES ****************/
 
 h1,
 h2,
-legend {
+legend,
+#submit {
     font-family: 'Poppins', sans-serif;
 }
 
 p,
 input,
 label,
-#state {
-    font-family: 'Poiret One', cursive;
+#state,
+input[type="chechbox"],
+textarea {
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.1rem;
+    color: rgb(116, 116, 116);
  }
 
 
 
 h1,
-#intro{
+#intro,
+footer {
     text-align: center;
 }
 
 #intro,
-#contact_info {
+#contact_info,
+#newsletter,
+#submit {
     margin: 0 auto;
     width: 95%;
 }
@@ -57,18 +66,21 @@ h1,
 
 fieldset {
     margin: 0;
+    border: 0;
+    padding-left:0;
+    padding-right:0;
 }
 
 label {
     font-weight: 700;
     margin: 10px 0;
+    display: block;
 }
 
 #contact_info {
     display: flex;
     flex-direction: column;
     padding: 20px 0;
-    border: 0;
     margin-top: 5px;
 }
 
@@ -87,5 +99,64 @@ input[type="text"],
     width: 50%;
 }
 
-#contact_info:nth-child(-n+5) {
+input::placeholder {
+    text-align: right;
+    padding-right: 5%;
+    font-size: .89em;
+}
+
+#state {
+    padding-left: 2%;
+    font-size: 1em;
+}
+
+input:focus,
+#state:focus {
+    outline: none;
+    border: 2px solid rgb(1, 28, 53);
+}
+
+
+
+/********** NEWSLETTER SECTION  *****************/
+
+
+input[type="checkbox"] {
+    margin-left: 10px;
+}
+
+#newsletter > label:not(#news_format):not(#ll_topics) {
+    display: inline-block;
+    margin: 10px;
+}
+
+#news_format,
+#ll_topics {
+    margin-top: 25px;
+}
+
+textarea {
+    width: 100%;
+    height: 125px;
+    background-color: rgb(235, 235, 235);
+}
+
+/********* SUBMIT *************/
+
+#submit {
+    display: block;
+    height: 75px;
+    font-size: 1.5rem;
+    color:#fff;
+    margin-top: 30px;
+    border-radius: 10px;
+    background-color: rgb(58, 173, 148);
+    border:0;
+}
+
+/******* FOOTER ************/
+
+footer {
+    font-style: italic;
+    height: 250px;
 }
