--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ footer {
 }
 
 /********** FORM **********/
+form {
+    background-color: rgb(248, 248, 248);
+    padding-bottom: 25px;
+}
 
 fieldset {
     margin: 0;
@@ -84,18 +88,19 @@ label {
     margin-top: 5px;
 }
 
-input[type="text"],
+.input_wrapper > input,
 #state {
     width: 100%;
     height: 50px;
-    padding:0;
+    padding:0 0 0 2%;
     border-radius: 10px;
     border: 0;
     background-color: rgb(235, 235, 235);
+    transition-duration: .8s;
 }
 
 
-#contact_info input:last-child {
+#zip_code {
     width: 50%;
 }
 
@@ -106,14 +111,15 @@ input::placeholder {
 }
 
 #state {
-    padding-left: 2%;
     font-size: 1em;
 }
 
-input:focus,
-#state:focus {
+.input_wrapper > input:focus,
+#state:focus,
+textarea:focus {
     outline: none;
     border: 2px solid rgb(1, 28, 53);
+    background-color: rgb(218, 218, 218);
 }
 
 
@@ -121,11 +127,7 @@ input:focus,
 /********** NEWSLETTER SECTION  *****************/
 
 
-input[type="checkbox"] {
-    margin-left: 10px;
-}
-
-#newsletter > label:not(#news_format):not(#ll_topics) {
+#newsletter > label:not(#news_format):not(#ll_topics):not(#news_topic) {
     display: inline-block;
     margin: 10px;
 }
@@ -138,6 +140,8 @@ input[type="checkbox"] {
 textarea {
     width: 100%;
     height: 125px;
+    border-radius: 10px;
+    transition-duration: .8s;
     background-color: rgb(235, 235, 235);
 }
 
@@ -159,4 +163,48 @@ textarea {
 footer {
     font-style: italic;
     height: 250px;
+}
+
+
+/********** Media queries *****/
+
+@media (min-width: 768px) {
+    
+
+    h1 {
+        font-size: 1.5rem;
+        padding: 15px 0;
+    }
+
+    #intro {
+        margin-top: 40px;
+        padding-bottom: 30px;
+    }
+
+    legend {
+        padding-top: 45px;
+        font-size: 1.5em;
+    }
+
+    main {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .input_wrapper {
+        display: flex;
+        margin: 15px 0;
+        justify-content: space-between;
+    }
+
+    .input_wrapper label {
+        width: 30%
+    }
+
+    .input_wrapper input,
+    #zip_code,
+    #state {
+        width: 70%;
+    }
+
 }
